--- a/pet-club/services.html
+++ b/pet-club/services.html
@@ -40,6 +40,7 @@ jQuery(document).ready(function () {
               </ul>
             </li>
             <li class="current"><a href="services.html">Services</a></li>
+            <li><a href="products.html">Products</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="contacts.html">Contacts </a></li>
           </ul>
