--- a/anipat/index.html
+++ b/anipat/index.html
@@ -49,7 +49,7 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a  href="index.html">home</a></li>
+                                        <li class="current" ><a  href="index.html">home</a></li>
                                         <li><a href="about.html">about</a></li>
                                         <li><a href="products.html">Products</a></li>
                                         <li><a href="service.html">services</a></li>
