--- a/anipat/service.html
+++ b/anipat/service.html
@@ -52,7 +52,7 @@
                                     <ul id="navigation">
                                         <li><a href="index.html">home</a></li>
                                         <li><a href="about.html">about</a></li>
-                                        <li><a href="products.html">Product</a></li>
+                                        <li><a href="products.html">Products</a></li>
                                         <li class="current"><a href="service.html">services</a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                         <li><a><i style="font-size: 1.5rem;" class="fas fa-shopping-cart "></i></a></li>
