--- a/anipat/service.html
+++ b/anipat/service.html
@@ -55,7 +55,7 @@
                                         <li><a href="">Product</a></li>
                                         <li><a href="service.html">services</a></li>
                                         <li><a href="contact.html">Contact</a></li>
-                                        <li><a><i style="font-size: 1.5rem;" class="fas fa-shopping-cart "></i></a></li>
+                                        <li><a href="shoppingcart.html"><i style="font-size: 1.5rem;" class="fas fa-shopping-cart "></i></a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -90,9 +90,21 @@
             <div class="row justify-content-center ">
                 <div class="col-lg-7 col-md-10">
                     <div class="section_title text-center mb-95">
-                        <h3>Services for every dog</h3>
+                        <h3>Services for your pets</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
                     </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2"></div>
+                <div class="col-6"></div>
+                <div class="col-4">
+                    <div class=" justify-content-center h-100">
+                        <div class="searchbar">
+                            <input class="search_input" type="text" name="" placeholder="Search...">
+                            <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+                          </div>
+                      </div>
                 </div>
             </div>
             <div class="row justify-content-center">
