update about.html, contact.html, shoppingcart.html

--- a/anipat/contact.html
+++ b/anipat/contact.html
@@ -55,7 +55,7 @@
                                         <li><a href="products.html">Product</a></li>
                                         <li><a href="service.html">services</a></li>
                                         <li class="current"><a href="contact.html">Contact</a></li>
-                                        <li><a><i style="font-size: 1.5rem;" class="fas fa-shopping-cart "></i></a></li>
+                                        <li><a href="shoppingcart.html"><i style="font-size: 1.5rem;" class="fas fa-shopping-cart "></i></a></li>
                                     </ul>
                                 </nav>
                             </div>
