--- a/anipat/products.html
+++ b/anipat/products.html
@@ -258,7 +258,7 @@
                         </div>
                         <div class="contact_btn d-flex align-items-center justify-content-center">
                             <a href="contact.html" class="boxed-btn4">Contact Us</a>
-                            <p>Or  <a href="#"> +880 4664 216</a></p>
+                            <p>Or  <a href="#"> +35 752 7322</a></p>
                         </div>
                     </div>
                 </div>
@@ -278,9 +278,11 @@
                                 Contact Us
                             </h3>
                             <ul class="address_line">
-                                <li>+555 0000 565</li>
-                                <li><a href="#">Demomail@gmail.Com</a></li>
-                                <li>700, Green Lane, New York, USA</li>
+                                <li>+35 752 7322</li>
+                                <li>+39 605 2731</li>
+                                <li>+93 598 0608</li>
+                                <li><a href="#">PetSpa@gmail.com</a></li>
+                                <li>Lô 14, Đường số 5, Công viên Phần mềm Quang Trung, Q. 12, Tp. HCM, Việt Nam</li>
                             </ul>
                         </div>
                     </div>
@@ -304,11 +306,10 @@
                                 Quick Link
                             </h3>
                             <ul class="links">
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
-                                <li><a href="#">Terms of Service</a></li>
-                                <li><a href="#">Login info</a></li>
-                                <li><a href="#">Knowledge Base</a></li>
+                                <li><a href="about.html">About Us</a></li>
+                                <li><a href="products.html">Products</a></li>
+                                <li><a href="service.html">Service</a></li>
+                                <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -319,9 +320,7 @@
                                     <img src="img/logo.png" alt="">
                                 </a>
                             </div>
-                            <p class="address_text">239 E 5th St, New York 
-                                NY 10003, USA
-                            </p>
+                            <p class="address_text">© 2015 SaigonTech is the Official Affiliate of Houston Community College, Texas, US</p>
                             <div class="socail_links">
                                 <ul>
                                     <li>
