--- a/anipat/service.html
+++ b/anipat/service.html
@@ -201,63 +201,6 @@
         </div>
     </div>
     <!-- testmonial_area_end  -->
-
-    <!-- team_area_start  -->
-    <div class="team_area">
-        <div class="container">
-            <div class="row justify-content-center ">
-                <div class="col-lg-6 col-md-10">
-                    <div class="section_title text-center mb-95">
-                        <h3>Our Team</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-4 col-md-6">
-                    <div class="single_team">
-                        <div class="thumb">
-                            <img src="img/team/1.png" alt="">
-                        </div>
-                        <div class="member_name text-center">
-                            <div class="mamber_inner">
-                                <h4>Rala Emaia</h4>
-                                <p>Senior Director</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single_team">
-                        <div class="thumb">
-                            <img src="img/team/2.png" alt="">
-                        </div>
-                        <div class="member_name text-center">
-                            <div class="mamber_inner">
-                                <h4>jhon Smith</h4>
-                                <p>Senior Director</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single_team">
-                        <div class="thumb">
-                            <img src="img/team/3.png" alt="">
-                        </div>
-                        <div class="member_name text-center">
-                            <div class="mamber_inner">
-                                <h4>Rala Emaia</h4>
-                                <p>Senior Director</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- team_area_start  -->
-
     <!-- contact_anipat_start  -->
     <div class="contact_anipat anipat_bg_1">
         <div class="container">
@@ -270,7 +213,7 @@
                         </div>
                         <div class="contact_btn d-flex align-items-center justify-content-center">
                             <a href="contact.html" class="boxed-btn4">Contact Us</a>
-                            <p>Or  <a href="#"> +880 4664 216</a></p>
+                            <p>Or  <a href="#"> +35 752 7322</a></p>
                         </div>
                     </div>
                 </div>
@@ -290,9 +233,11 @@
                                 Contact Us
                             </h3>
                             <ul class="address_line">
-                                <li>+555 0000 565</li>
-                                <li><a href="#">Demomail@gmail.Com</a></li>
-                                <li>700, Green Lane, New York, USA</li>
+                                <li>+35 752 7322</li>
+                                <li>+39 605 2731</li>
+                                <li>+93 598 0608</li>
+                                <li><a href="#">PetSpa@gmail.com</a></li>
+                                <li>Lô 14, Đường số 5, Công viên Phần mềm Quang Trung, Q. 12, Tp. HCM, Việt Nam</li>
                             </ul>
                         </div>
                     </div>
@@ -316,11 +261,10 @@
                                 Quick Link
                             </h3>
                             <ul class="links">
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
-                                <li><a href="#">Terms of Service</a></li>
-                                <li><a href="#">Login info</a></li>
-                                <li><a href="#">Knowledge Base</a></li>
+                                <li><a href="about.html">About Us</a></li>
+                                <li><a href="products.html">Products</a></li>
+                                <li><a href="service.html">Service</a></li>
+                                <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -331,9 +275,7 @@
                                     <img src="img/logo.png" alt="">
                                 </a>
                             </div>
-                            <p class="address_text">239 E 5th St, New York 
-                                NY 10003, USA
-                            </p>
+                            <p class="address_text">© 2015 SaigonTech is the Official Affiliate of Houston Community College, Texas, US</p>
                             <div class="socail_links">
                                 <ul>
                                     <li>
