--- a/anipat/shoppingcart.html
+++ b/anipat/shoppingcart.html
@@ -174,7 +174,7 @@
             </div>
         </div>
     </div>
-    <!-- footer_start  -->
+   
     <div class="contact_anipat anipat_bg_1">
         <div class="container">
             <div class="row justify-content-center">
@@ -186,13 +186,14 @@
                         </div>
                         <div class="contact_btn d-flex align-items-center justify-content-center">
                             <a href="contact.html" class="boxed-btn4">Contact Us</a>
-                            <p>Or  <a href="#"> +880 4664 216</a></p>
+                            <p>Or  <a href="#"> +35 752 7322</a></p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- footer_start  -->
     <footer class="footer">
         <div class="footer_top">
             <div class="container">
@@ -203,9 +204,11 @@
                                 Contact Us
                             </h3>
                             <ul class="address_line">
-                                <li>+555 0000 565</li>
-                                <li><a href="#">Demomail@gmail.Com</a></li>
-                                <li>700, Green Lane, New York, USA</li>
+                                <li>+35 752 7322</li>
+                                <li>+39 605 2731</li>
+                                <li>+93 598 0608</li>
+                                <li><a href="#">PetSpa@gmail.com</a></li>
+                                <li>Lô 14, Đường số 5, Công viên Phần mềm Quang Trung, Q. 12, Tp. HCM, Việt Nam</li>
                             </ul>
                         </div>
                     </div>
@@ -229,11 +232,10 @@
                                 Quick Link
                             </h3>
                             <ul class="links">
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
-                                <li><a href="#">Terms of Service</a></li>
-                                <li><a href="#">Login info</a></li>
-                                <li><a href="#">Knowledge Base</a></li>
+                                <li><a href="about.html">About Us</a></li>
+                                <li><a href="products.html">Products</a></li>
+                                <li><a href="service.html">Service</a></li>
+                                <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -244,9 +246,7 @@
                                     <img src="img/logo.png" alt="">
                                 </a>
                             </div>
-                            <p class="address_text">239 E 5th St, New York 
-                                NY 10003, USA
-                            </p>
+                            <p class="address_text">© 2015 SaigonTech is the Official Affiliate of Houston Community College, Texas, US</p>
                             <div class="socail_links">
                                 <ul>
                                     <li>
@@ -293,6 +293,7 @@
         </div>
     </footer>
     <!-- footer_end  -->
+
     
         <!-- JS here -->
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
