--- a/anipat/service.html
+++ b/anipat/service.html
@@ -55,7 +55,8 @@
                                         <li><a href="products.html">Products</a></li>
                                         <li class="current"><a href="service.html">services</a></li>
                                         <li><a href="contact.html">Contact</a></li>
-                                        <li><a href="shoppingcart.html"><i style="font-size: 1.5rem;" class="fas fa-shopping-cart "></i></a></li>
+                                        <li><a href="shoppingcart.html"><i style="font-size: 1.5rem;"
+                                                    class="fas fa-shopping-cart "></i></a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -91,60 +92,77 @@
                 <div class="col-lg-7 col-md-10">
                     <div class="section_title text-center mb-95">
                         <h3>Services for your pets</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-2"></div>
-                <div class="col-6"></div>
+                <div class="col-3">
+                    <div class="btn-group">
+                        <button type="button" class="btn dropdown-toggle dropdownSort" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            SORT BY
+                        </button>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                            <a class="dropdown-item" href="#">Separated link</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-5"></div>
                 <div class="col-4">
                     <div class=" justify-content-center h-100">
                         <div class="searchbar">
                             <input class="search_input" type="text" name="" placeholder="Search...">
                             <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
-                          </div>
-                      </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-md-6">
                     <div class="single_service">
-                         <div class="service_thumb service_icon_bg_1 d-flex align-items-center justify-content-center">
-                             <div class="service_icon">
-                                 <img src="img/service/service_icon_1.png" alt="">
-                             </div>
-                         </div>
-                         <div class="service_content text-center">
+                        <div class="service_thumb service_icon_bg_1 d-flex align-items-center justify-content-center">
+                            <div class="service_icon">
+                                <img src="img/service/service_icon_1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="service_content text-center">
                             <h3>Pet Boarding</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
-                         </div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_service active">
-                         <div class="service_thumb service_icon_bg_1 d-flex align-items-center justify-content-center">
-                             <div class="service_icon">
-                                 <img src="img/service/service_icon_2.png" alt="">
-                             </div>
-                         </div>
-                         <div class="service_content text-center">
+                        <div class="service_thumb service_icon_bg_1 d-flex align-items-center justify-content-center">
+                            <div class="service_icon">
+                                <img src="img/service/service_icon_2.png" alt="">
+                            </div>
+                        </div>
+                        <div class="service_content text-center">
                             <h3>Healthy Meals</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
-                         </div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_service">
-                         <div class="service_thumb service_icon_bg_1 d-flex align-items-center justify-content-center">
-                             <div class="service_icon">
-                                 <img src="img/service/service_icon_3.png" alt="">
-                             </div>
-                         </div>
-                         <div class="service_content text-center">
+                        <div class="service_thumb service_icon_bg_1 d-flex align-items-center justify-content-center">
+                            <div class="service_icon">
+                                <img src="img/service/service_icon_3.png" alt="">
+                            </div>
+                        </div>
+                        <div class="service_content text-center">
                             <h3>Pet Spa</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
-                         </div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -166,7 +184,9 @@
                                 <div class="test_content">
                                     <h4>Jhon Walker</h4>
                                     <span>Head of web design</span>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerci.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                        nostrud exerci.</p>
                                 </div>
                             </div>
                         </div>
@@ -178,7 +198,9 @@
                                 <div class="test_content">
                                     <h4>Jhon Walker</h4>
                                     <span>Head of web design</span>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerci.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                        nostrud exerci.</p>
                                 </div>
                             </div>
                         </div>
@@ -190,7 +212,9 @@
                                 <div class="test_content">
                                     <h4>Jhon Walker</h4>
                                     <span>Head of web design</span>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerci.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                        nostrud exerci.</p>
                                 </div>
                             </div>
                         </div>
@@ -209,11 +233,12 @@
                     <div class="contact_text text-center">
                         <div class="section_title text-center">
                             <h3>Why go with Anipat?</h3>
-                            <p>Because we know that even the best technology is only as good as the people behind it. 24/7 tech support.</p>
+                            <p>Because we know that even the best technology is only as good as the people behind it.
+                                24/7 tech support.</p>
                         </div>
                         <div class="contact_btn d-flex align-items-center justify-content-center">
                             <a href="contact.html" class="boxed-btn4">Contact Us</a>
-                            <p>Or  <a href="#"> +35 752 7322</a></p>
+                            <p>Or <a href="#"> +35 752 7322</a></p>
                         </div>
                     </div>
                 </div>
@@ -275,7 +300,8 @@
                                     <img src="img/logo.png" alt="">
                                 </a>
                             </div>
-                            <p class="address_text">© 2015 SaigonTech is the Official Affiliate of Houston Community College, Texas, US</p>
+                            <p class="address_text">© 2015 SaigonTech is the Official Affiliate of Houston Community
+                                College, Texas, US</p>
                             <div class="socail_links">
                                 <ul>
                                     <li>
@@ -312,9 +338,14 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <p class="copy_right text-center">
-                            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                        <p>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright &copy;
+                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This
+                            template is made with <i class="ti-heart" aria-hidden="true"></i> by <a
+                                href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        </p>
                         </p>
                     </div>
                 </div>
@@ -356,20 +387,20 @@
         $('#datepicker').datepicker({
             iconsLibrary: 'fontawesome',
             disableDaysOfWeek: [0, 0],
-        //     icons: {
-        //      rightIcon: '<span class="fa fa-caret-down"></span>'
-        //  }
+            //     icons: {
+            //      rightIcon: '<span class="fa fa-caret-down"></span>'
+            //  }
         });
         $('#datepicker2').datepicker({
             iconsLibrary: 'fontawesome',
             icons: {
-             rightIcon: '<span class="fa fa-caret-down"></span>'
-         }
+                rightIcon: '<span class="fa fa-caret-down"></span>'
+            }
 
         });
         var timepicker = $('#timepicker').timepicker({
-         format: 'HH.MM'
-     });
+            format: 'HH.MM'
+        });
     </script>
 </body>
 
