--- a/anipat/service.html
+++ b/anipat/service.html
@@ -98,8 +98,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-3">
-                    <div class="btn-group">
+                <div class="col-6">
+                    <div class="btn-group" style="margin-top: 0.65rem;">
                         <button type="button" class="btn dropdown-toggle dropdownSort" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
                             SORT BY
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-5"></div>
+                <div class="col-2"></div>
                 <div class="col-4">
                     <div class=" justify-content-center h-100">
                         <div class="searchbar">
