--- a/anipat/products.html
+++ b/anipat/products.html
@@ -95,6 +95,31 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-6">
+                    <div class="btn-group" style="margin-top: 0.65rem;">
+                        <button type="button" class="btn dropdown-toggle dropdownSort" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            SORT BY
+                        </button>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">A-Z</a>
+                            <a class="dropdown-item" href="#">Z-A</a>
+                            <a class="dropdown-item" href="#">Price:High - Low </a>
+                            <a class="dropdown-item" href="#">Price:Low - High</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2"></div>
+                <div class="col-4">
+                    <div class=" justify-content-center h-100">
+                        <div class="searchbar">
+                            <input class="search_input" type="text" name="" placeholder="Search...">
+                            <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-md-6">
                     <div class="single_service">
@@ -104,7 +129,7 @@
                              </div>
                          </div>
                          <div class="service_content text-center">
-                            <h3>Pet Boarding</h3>
+                            <h3>Foods</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
                          </div>
                     </div>
@@ -117,7 +142,7 @@
                              </div>
                          </div>
                          <div class="service_content text-center">
-                            <h3>Healthy Meals</h3>
+                            <h3>Toys</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
                          </div>
                     </div>
@@ -130,7 +155,7 @@
                              </div>
                          </div>
                          <div class="service_content text-center">
-                            <h3>Pet Spa</h3>
+                            <h3>Decorations</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
                          </div>
                     </div>
