--- a/anipat/service.html
+++ b/anipat/service.html
@@ -105,10 +105,10 @@
                             SORT BY
                         </button>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                            <a class="dropdown-item" href="#">Separated link</a>
+                            <a class="dropdown-item" href="#">A-Z</a>
+                            <a class="dropdown-item" href="#">Z-A</a>
+                            <a class="dropdown-item" href="#">Price:High - Low </a>
+                            <a class="dropdown-item" href="#">Price:Low - High</a>
                         </div>
                     </div>
                 </div>
