--- a/anipat/service.html
+++ b/anipat/service.html
@@ -105,10 +105,10 @@
                             SORT BY
                         </button>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">A-Z</a>
-                            <a class="dropdown-item" href="#">Z-A</a>
-                            <a class="dropdown-item" href="#">Price:High - Low </a>
-                            <a class="dropdown-item" href="#">Price:Low - High</a>
+                            <a class="dropdown-item" href="#">A -> Z</a>
+                            <a class="dropdown-item" href="#">Z -> A</a>
+                            <a class="dropdown-item" href="#">Highest to lowest price</a>
+                            <a class="dropdown-item" href="#">Separated link</a>
                         </div>
                     </div>
                 </div>
@@ -165,66 +165,54 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_service">
+                        <div class="service_thumb service_icon_bg_1 d-flex align-items-center justify-content-center">
+                            <div class="service_icon">
+                                <img src="img/service/service_icon_1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="service_content text-center">
+                            <h3>Pet Boarding</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_service active">
+                        <div class="service_thumb service_icon_bg_1 d-flex align-items-center justify-content-center">
+                            <div class="service_icon">
+                                <img src="img/service/service_icon_2.png" alt="">
+                            </div>
+                        </div>
+                        <div class="service_content text-center">
+                            <h3>Healthy Meals</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_service">
+                        <div class="service_thumb service_icon_bg_1 d-flex align-items-center justify-content-center">
+                            <div class="service_icon">
+                                <img src="img/service/service_icon_3.png" alt="">
+                            </div>
+                        </div>
+                        <div class="service_content text-center">
+                            <h3>Pet Spa</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <!-- service_area_end -->
 
-    <!-- testmonial_area_start  -->
-    <div class="testmonial_area">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-10">
-                    <div class="textmonial_active owl-carousel">
-                        <div class="testmonial_wrap">
-                            <div class="single_testmonial d-flex align-items-center">
-                                <div class="test_thumb">
-                                    <img src="img/testmonial/1.png" alt="">
-                                </div>
-                                <div class="test_content">
-                                    <h4>Jhon Walker</h4>
-                                    <span>Head of web design</span>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                        nostrud exerci.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="testmonial_wrap">
-                            <div class="single_testmonial d-flex align-items-center">
-                                <div class="test_thumb">
-                                    <img src="img/testmonial/1.png" alt="">
-                                </div>
-                                <div class="test_content">
-                                    <h4>Jhon Walker</h4>
-                                    <span>Head of web design</span>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                        nostrud exerci.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="testmonial_wrap">
-                            <div class="single_testmonial d-flex align-items-center">
-                                <div class="test_thumb">
-                                    <img src="img/testmonial/1.png" alt="">
-                                </div>
-                                <div class="test_content">
-                                    <h4>Jhon Walker</h4>
-                                    <span>Head of web design</span>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                        nostrud exerci.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-    <!-- testmonial_area_end  -->
     <!-- contact_anipat_start  -->
     <div class="contact_anipat anipat_bg_1">
         <div class="container">
