--- a/anipat/about.html
+++ b/anipat/about.html
@@ -69,6 +69,12 @@
         </div>
     </header>
     <!-- header_start  -->
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">About us</li>
+        </ol>
+      </nav>
 
     <!-- bradcam_area_start -->
     <div class="bradcam_area breadcam_bg">
@@ -199,7 +205,7 @@
                         </div>
                         <div class="contact_btn d-flex align-items-center justify-content-center">
                             <a href="contact.html" class="boxed-btn4">Contact Us</a>
-                            <p>Or  <a href="#"> +35 752 7322</a></p>
+                            <p>Or  <a href="tel: +35 752 7322"> +35 752 7322</a></p>
                         </div>
                     </div>
                 </div>
