--- a/anipat/contact.html
+++ b/anipat/contact.html
@@ -70,6 +70,13 @@
     </header>
     <!-- header_start  -->
 
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Contact</li>
+        </ol>
+      </nav>
+
     <!-- bradcam_area_start -->
     <div class="bradcam_area breadcam_bg">
         <div class="container">
