--- a/anipat/service.html
+++ b/anipat/service.html
@@ -71,6 +71,13 @@
     </header>
     <!-- header_start  -->
 
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Services</li>
+        </ol>
+      </nav>
+
     <!-- bradcam_area_start -->
     <div class="bradcam_area breadcam_bg">
         <div class="container">
@@ -226,7 +233,7 @@
                         </div>
                         <div class="contact_btn d-flex align-items-center justify-content-center">
                             <a href="contact.html" class="boxed-btn4">Contact Us</a>
-                            <p>Or <a href="#"> +35 752 7322</a></p>
+                            <p>Or <a href="tel: +35 752 7322"> +35 752 7322</a></p>
                         </div>
                     </div>
                 </div>
