--- a/Project-Pet-Spa/src/main/resources/static/products.html
+++ b/Project-Pet-Spa/src/main/resources/static/products.html
@@ -144,7 +144,7 @@
                                     <button type="button" class="btn btn-dark">Buy</button>
                                 </div>
                                 <div class="col-6">
-                                    <button type="button" class="btn btn-dark">Detail</button>
+                                    <button type="button" class="btn btn-dark"><a id="details" href="productdetail.html" >Detail</a></button>
                                 </div>
                             </div>
                          </div>
